crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__command_popup_flow__e2e_command_step3_navigated.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.render()
---
                                                                                
                                                                                
  search Search notes semantically                                              
  new Start new session                                                         
> clear Clear conversation context                                              
  help Show available commands                                                  
  mode Switch session mode ↓                                                    
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
